added blogs and fixed nav

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <div class="nav-links">
           <a href="#features">Features</a>
           <a href="#about">About</a>
+          <a href="blogs/index.html">Blog</a>
           <a href="#contact">Contact</a>
         </div>
       </nav>
