--- a/index.html
+++ b/index.html
@@ -46,15 +46,10 @@
         "operatingSystem": "Chrome",
         "offers": {
           "@type": "Offer",
-          "price": "0",
+          "price": "3.99",
           "priceCurrency": "USD"
         },
         "description": "Clean Cart is a Chrome extension that helps you identify harmful ingredients in food products while shopping on Instacart. Make healthier food choices with our visual badge system and ingredient analysis.",
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "4.8",
-          "ratingCount": "156"
-        },
         "featureList": "Visual ingredient alerts, Real-time ingredient analysis, Detailed ingredient information, Badge-based warning system",
         "screenshot": "https://getcleancart.com/icons/icon128.png",
         "softwareVersion": "1.0.0",
@@ -69,7 +64,35 @@
         }
       }
     </script>
-
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
+      fbq("init", "1842467803207525");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=1842467803207525&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="icons/icon16.png" type="image/png" />
   </head>
