added confirmation page for successful subscriptions so meta pixel can track

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
       fbq("init", "1842467803207525");
       fbq("track", "PageView");
+      fbq("track", "Lead");
     </script>
     <noscript
       ><img
