removed pageView event

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         s.parentNode.insertBefore(t, s);
       })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
       fbq("init", "1842467803207525");
-      fbq("track", "PageView");
+      // fbq("track", "PageView");
       fbq("track", "Lead");
     </script>
     <noscript
